# f1_calendar

./: CMakeLists.txt  main.cpp
include/: data_service.hpp  ics_writer.hpp
src/: data_service.cpp  ics_writer.cpp
